@@ -1,5 +1,10 @@
 2007-04-02  Akim Demaille  <demaille@gostai.com>
 
+	* src/uvariablename.cc (resolve_alias): Introduce a binary version.
+	Use to factor some code.
+
+2007-04-02  Akim Demaille  <demaille@gostai.com>
+
 	A for loop
 	* src/ucommand.cc (UCommand_ASSIGN_VALUE::execute_): Use a for
 	loop instead of a while loop.
